# limebar

./: COPYING  meson.build  metadata.json
data/: ga.hahahahahaha.limebar.appdata.xml.in  ga.hahahahahaha.limebar.desktop.in  ga.hahahahahaha.limebar.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: ga.hahahahahaha.limebar.data.gresource.xml  ga.hahahahahaha.limebar.src.gresource.xml  main.js  meson.build  window.js  window.ui
